# neo-stopmotion

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README-en.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: architect.md  ba.md  coordinator.md  devops.md  firmware-dev.md  pm.md  python-dev.md  qa.md  ux-designer.md
.claude/commands/: design.md
.claude/hooks/: scout-block.cjs  session-init.cjs
.github/workflows/: ci.yml
DOC/: ARCHITECTURE.md  EXPERIENCE_GUIDE.md  IMPLEMENTATION_PLAN.md  SYSTEM_GUIDE.md  USER_GUIDE.md
docs/: README.md  WORKING-WITH-PO.md  product-kanban.md
docs/00-research/: README.md
docs/02-architecture/: branch-naming-convention.md  two-layer-separation.md  working-modes-policy.md
docs/03-codebase/: README.md
docs/04-phases/: _compliance-violations.md  claude-active-phase.md  roadmap.md
docs/05-system-state/: README.md
docs/99-templates/: ADR-000-template.md  T-000-task-template.md  design-spec-template.md  domain-template.md  feature-brief-template.md  feature-manifest-template.yml  flow-template.md  qa-tester-closeout-template.md  qa-tester-request-template.md  session-log-template.md  spec-template.md  task-board-template.md
firmware/thingbot_stopmotion/: README.md  platformio.ini  thingbot_stopmotion.ino
scripts/: .env.publish.example  install_on_neo.sh  publish.sh
src/neo_stopmotion/: __init__.py  __main__.py  app.py
tests/: conftest.py
tests/unit/: test_app_controller.py  test_camera_select.py  test_capture_engine.py  (+12 more)
(+107 files in other folders)
