[project]
name = "neo-stopmotion"
version = "1.0.1"
description = "Stop-motion studio — NEO One × ThingEdu × Maker Việt"
authors = [
    {name = "Maker Việt"},
    {name = "Dế Foundation"},
    {name = "ThingEdu"},
]
license = {text = "MIT"}
readme = "README-en.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pyserial>=3.5",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "tomli>=2.0.1; python_version<'3.11'",
]

[project.scripts]
neo-stopmotion = "neo_stopmotion.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neo_stopmotion = ["ui/qml/**/*.qml", "ui/qml/**/qmldir", "config/*.toml", "resources/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
qt_api = "pyqt6"
